--- a/admin/package.json
+++ b/admin/package.json
@@ -39,6 +39,7 @@
     "tui-editor": "1.3.3",
     "vue": "2.6.10",
     "vue-count-to": "1.0.13",
+    "vue-particles": "^1.0.9",
     "vue-router": "3.0.2",
     "vue-splitpane": "1.0.4",
     "vue-wangeditor": "^1.3.10",
