--- a/admin/package.json
+++ b/admin/package.json
@@ -36,6 +36,7 @@
     "script-loader": "0.7.2",
     "sortablejs": "1.8.4",
     "spark-md5": "^3.0.1",
+    "three": "^0.122.0",
     "tui-editor": "1.3.3",
     "vue": "2.6.10",
     "vue-count-to": "1.0.13",
